# slides_umadeg

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
core/: models.py  parser.py  pdf_generator.py  pdf_reader.py  slide_generator.py  utils.py
