[tool.poetry]
name = "umadeg-slides"
version = "0.1.0"
description = "Gerador automático de slides para Escola Dominical"
authors = ["Antigravity <antigravity@gemini.com>"]
readme = "README.md"
packages = [{include = "core"}]

[tool.poetry.dependencies]
python = "^3.13"
pymupdf = "^1.24.0"
python-pptx = "^1.0.0"
streamlit = "^1.35.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
